RESOLVED FIXED234083
[GTK][WPE][VTT] tests media/track/track-webvtt-* fail on GTK and WPE
https://bugs.webkit.org/show_bug.cgi?id=234083
Summary [GTK][WPE][VTT] tests media/track/track-webvtt-* fail on GTK and WPE
Arcady Goldmints-Orlov
Reported 2021-12-09 07:25:18 PST
These tests were added in r286743 and test the layout of captions on a video. They have failed on both GTK and WPE since they were added.
Attachments
Patch (8.35 KB, patch)
2021-12-18 02:42 PST, Philippe Normand
ews-feeder: commit-queue-
Patch (8.82 KB, patch)
2021-12-18 03:32 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2021-12-18 02:42:11 PST
Philippe Normand
Comment 2 2021-12-18 03:32:13 PST
EWS
Comment 3 2021-12-19 02:04:34 PST
Committed r287239 (245399@main): <https://commits.webkit.org/245399@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447516 [details].
Radar WebKit Bug Importer
Comment 4 2021-12-19 02:05:19 PST
Note You need to log in before you can comment on or make changes to this bug.