[GTK][WPE][VTT] tests media/track/track-webvtt-* fail on GTK and WPE https://bugs.webkit.org/show_bug.cgi?id=234083

Patch by Philippe Normand <pnormand@igalia.com> on 2021-12-19
Reviewed by Eric Carlson.

Source/WebCore:

Remove ENABLE(AVF_CAPTIONS) from cross-platform call sites. This is needed only in the
AVFoundation player. The Adwaita media controls also now properly render
-webkit-media-text-track-display-backdrop as required for media/track tests and as done in
the Apple media controls.

* Modules/mediacontrols/mediaControlsAdwaita.css:
(video::-webkit-media-text-track-display-backdrop):
(video::-webkit-media-text-track-container b):
(video::-webkit-media-text-track-container u):
(video::-webkit-media-text-track-container i):
(video::-webkit-media-text-track-container .hidden,):
* html/HTMLMediaElement.cpp:
* html/HTMLMediaElement.h:
* platform/graphics/MediaPlayer.cpp:
* platform/graphics/MediaPlayer.h:
(WebCore::MediaPlayerClient::outOfBandTrackSources):
* platform/graphics/MediaPlayerPrivate.h:
(WebCore::MediaPlayerPrivateInterface::notifyTrackModeChanged):
* platform/graphics/PlatformTextTrack.h:

LayoutTests:

* platform/glib/TestExpectations:


Canonical link: https://commits.webkit.org/245399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287239 268f45cc-cd09-0410-ab3c-d52691b4dbfc